--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
   body {
     scroll-behavior: smooth;
   }
-
-  .nav-link {
-    color: black;
+  
+  .mt-70 {
+    margin-top: 70px;
   }
   
   .btnScrollToTop {
